--- a/PTS/Views/Home/Index.cshtml
+++ b/PTS/Views/Home/Index.cshtml
@@ -8,6 +8,8 @@
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
+<h1>Hey!Rhythm here</h1>
+
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
