--- a/PTS/Views/Shared/_Layout.cshtml
+++ b/PTS/Views/Shared/_Layout.cshtml
@@ -8,13 +8,15 @@
     @Scripts.Render("~/bundles/modernizr")
     <!--font awesome script for icons-->
     <script src="https://kit.fontawesome.com/0741bebd44.js" crossorigin="anonymous"></script>
-
+    @RenderSection("HeadContent", required:false)
 </head>
 <body>
     <nav class="navbar navbar-expand-md bg-light navbar-light fixed-top">
         <div class="container">
             <!-- Brand -->
-            <a class="navbar-brand" href="/Home/Index">Plant Tracking System</a>
+            <a class="navbar-brand" href="/Home/Index">
+                <img src="~/Content/home/img/logo.png" style="width:200px;height:50px">
+            </a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -24,14 +26,14 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    @*<li class="nav-item">
                         <a class="nav-link" href="#">Plants</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Family</a>
-                    </li>
+                    </li>*@
                     <li class="nav-item">
-                        @Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })
+                        @Html.ActionLink("About Us", "About", "Home", new { area = "" }, new { @class = "nav-link" })
                     </li>
                 </ul>
 
@@ -44,19 +46,20 @@
                     </li>
                 </ul>
             </div>
-            
+
         </div>
     </nav>
-    <div class="container body-content">
+
+    <div>
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
+    <footer>
+        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    
+
+
 </body>
 </html>
