--- a/PTS/Content/home/HomeStyles.css
+++ b/PTS/Content/home/HomeStyles.css
@@ -13,37 +13,14 @@
     background-attachment: fixed;
     text-align: center;
     color: #fff;
-}
-
-    .mine img {
-        width: 200px;
-        float: left;
-        margin-top: -45px;
-    }
-
-a.login-btn {
-    width: 150px;
-    padding: 10px;
-    outline: none !important;
-    border: 2px solid #fff;
-    border-radius: 50px;
-    background: transparent;
-    color: #fff;
-    float: right;
-    margin-top: 20px;
-    transition: 0.2s;
-}
-
-.login-btn:hover {
-    text-decoration: none;
-    background-color: #1d9e39;
-    border: 1px solid #18691f;
-    color: #fff;
+    margin-top:0px;
+    padding-top:100px;
+    padding-bottom:100px;
 }
 
 .mine h1 {
-    padding-top: 230px;
-    padding-bottom: 15px;
+    padding-top: 150px;
+    padding-bottom: 20px;
     font-size: 55px;
 }
 
@@ -110,9 +87,60 @@ a.login-btn {
 }
 
 .footer {
-    padding: 100px 200px;
-    background-image: linear-gradient(#996f15,#0b5c23);
+    padding: 5px;
+    background-image: linear-gradient(#ac8532,#21701b);
     color: #fff;
+}
+
+.footer-logo {
+    width: 250px;
+    padding: 5px;
+}
+
+.footer a {
+    text-decoration: none;
+    padding-left: 5px;
+    color: #fff;
+}
+
+    .footer a:hover {
+        text-decoration: none;
+        color: #996f15;
+    }
+
+.footer h4 {
+    text-align: left;
+    padding-top: 15px;
+    padding-bottom: 5px;
+    font-size: 30px;
+}
+
+.footer p {
+    text-align: justify;
+    padding-top: 5px;
+    padding-right: 35px;
+    font-size: 15px;
+}
+
+.footer hr {
+    background: #fff;
+}
+
+.footer .copyright {
+    text-align: center;
+    font-size: 12px;
+}
+
+.fa-phone-square-alt {
+    margin: 0 5px;
+}
+
+.fa-envelope {
+    margin: 0 5px;
+}
+
+.fa-map-marker-alt {
+    margin: 0 5px;
 }
 
 #qr_adv {
@@ -132,6 +160,16 @@ a.login-btn {
 
 @media (min-width:74.9em) {
 
+    #qr {
+        padding-left: 300px;
+    }
+
+    #adv {
+        padding-right: 300px;
+    }
+}
+
+@media (min-width:61.9em) {
     #qr {
         padding-left: 300px;
     }
