--- a/PTS/Views/Shared/_Layout.cshtml
+++ b/PTS/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         <div class="container">
             <!-- Brand -->
             <a class="navbar-brand" href="/Home/Index">
-                <img src="~/Content/home/img/logo.png" style="width:200px;height:50px">
+                <img src="~/Content/home/img/logo.png" style="width:150px;height:50px">
             </a>
 
             <!-- Toggler/collapsibe Button -->
@@ -25,17 +25,18 @@
 
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    @*<li class="nav-item">
+                @*<ul class="navbar-nav">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Plants</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Family</a>
-                    </li>*@
+                    </li>
                     <li class="nav-item">
                         @Html.ActionLink("About Us", "About", "Home", new { area = "" }, new { @class = "nav-link" })
                     </li>
-                </ul>
+                    
+                </ul>*@
 
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
@@ -53,9 +54,6 @@
     <div>
         @RenderBody()
     </div>
-    <footer>
-        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
