--- a/PTS/Views/Shared/_Layout.cshtml
+++ b/PTS/Views/Shared/_Layout.cshtml
@@ -26,17 +26,17 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 @*<ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Plants</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Family</a>
-                    </li>
-                    <li class="nav-item">
-                        @Html.ActionLink("About Us", "About", "Home", new { area = "" }, new { @class = "nav-link" })
-                    </li>
-                    
-                </ul>*@
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Plants</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Family</a>
+                        </li>
+                        <li class="nav-item">
+                            @Html.ActionLink("About Us", "About", "Home", new { area = "" }, new { @class = "nav-link" })
+                        </li>
+
+                    </ul>*@
 
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
@@ -54,6 +54,30 @@
     <div>
         @RenderBody()
     </div>
+
+    <section class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-xs-12">
+                    <img src="~/Content/home/img/logo.png" alt="plantTracker" class="footer-logo">
+                </div>
+                <div class="col-md-4 col-xs-12 links">
+                    <h4>Quick links</h4>
+                    <p><a href="#">About us</a></p>
+                    <p><a href="#">Link</a></p>
+                    <p><a href="#">Link</a></p>
+                </div>
+                <div class="col-md-4 col-xs-12 loc">
+                    <h4>Contact</h4>
+                    <p><i class="fas fa-phone-square-alt"></i>+91-987654321</p>
+                    <p><i class="far fa-envelope"></i>group7.infotech@gmail.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i>Lovely Infotech</p>
+                </div>
+            </div>
+            <hr>
+            <p class="copyright">Lovely Infotech Group-7</p>
+        </div>
+    </section>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
