--- a/PTS/Content/Site.css
+++ b/PTS/Content/Site.css
@@ -10,6 +10,7 @@ body, html {
 }
 
 .footer {
+    margin-top:25px;
     padding: 5px;
     background-image: linear-gradient(#ac8532,#21701b);
     color: #fff;
