--- a/PTS/Views/Shared/_Layout.cshtml
+++ b/PTS/Views/Shared/_Layout.cshtml
@@ -40,10 +40,10 @@
 
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign Up <span class="fas fa-user-alt"></span></a>
+                        <a class="nav-link" href="/../Account/LoginRegister">Sign Up <span class="fas fa-user-alt"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login <span class="fas fa-sign-in-alt"></span></a>
+                        <a class="nav-link" href="/../Account/LoginRegister">/  Login <span class="fas fa-sign-in-alt"></span></a>
                     </li>
                 </ul>
             </div>
