Fix login register page with padding

--- a/PTS/Views/Account/LoginRegister.cshtml
+++ b/PTS/Views/Account/LoginRegister.cshtml
@@ -34,7 +34,7 @@
     </script>
 }
 
-<div class="background-loginregister">
+<section class="background-loginregister">
     <div class="container register">
 
         <div class="row">
@@ -170,4 +170,4 @@
 
     </div>
 
-</div>
+</section>
