--- a/PTS/Content/Account/LoginRegisterStyles.css
+++ b/PTS/Content/Account/LoginRegisterStyles.css
@@ -91,7 +91,6 @@ a {
 
 .register {
     background: black;
-    margin-top: 8%;
     padding: 5%;
     border-radius: 20px;
     width: 50%;
@@ -129,7 +128,6 @@ label {
     .register {
         width: 90%;
         padding-top: 50px;
-        margin-top: 40%;
         /* padding: 15px; */
     }
 
@@ -151,7 +149,6 @@ label {
     .register {
         width: 90%;
         padding-top: 50px;
-        margin-top: 30%;
         /* padding: 15px; */
     }
 
@@ -175,7 +172,6 @@ label {
     .register {
         width: 90%;
         padding-top: 50px;
-        margin-top: 40%;
         /* padding: 15px; */
     }
 
@@ -197,7 +193,6 @@ label {
     .register {
         width: 90%;
         padding-top: 50px;
-        margin-top: 40%;
         /* padding: 15px; */
     }
 
@@ -215,5 +210,7 @@ label {
 }
 
 .background-loginregister {
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('~/Content/home/img/home-background.jpg');
+    padding: 10%;
+    /*background-color: black;*/
+    background-image: url('~/Content/home/img/home-background.jpg');
 }
