--- a/PTS/Views/Account/LoginRegister.cshtml
+++ b/PTS/Views/Account/LoginRegister.cshtml
@@ -71,7 +71,7 @@
 
                                         <label>UserName</label>
 
-                                        <input type="text" name="LoginUsername" class="form-control" value="" required="" />
+                                        <input type="text" name="LoginUsername" class="form-control" value="@ViewBag.Username" required="" />
 
                                     </div>
 
@@ -113,7 +113,7 @@
 
                                         <label>UserName</label>
 
-                                        <input type="text" name="RegisterUsername" class="form-control" value="" required="" />
+                                        <input type="text" name="RegisterUsername" class="form-control" value="@ViewBag.Username" required="" />
 
                                     </div>
 
@@ -121,10 +121,11 @@
 
                                         <label>Email</label>
 
-                                        <input type="email" name="RegisterEmail" class="form-control" value="" required />
+                                        <input type="email" name="RegisterEmail" class="form-control" value="@ViewBag.Email" required />
                                         @*pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" ,*@
 
                                     </div>
+
 
                                     <div class="form-group">
 
