Add dismiss button for messages

--- a/PTS/Views/Account/LoginRegister.cshtml
+++ b/PTS/Views/Account/LoginRegister.cshtml
@@ -71,7 +71,7 @@
 
                                         <label>UserName</label>
 
-                                        <input type="text" name="LoginUsername" class="form-control" value="@ViewBag.Username" required="" />
+                                        <input type="text" name="LoginUsername" class="form-control" value="@ViewBag.LoginUsername" required="" />
 
                                     </div>
 
@@ -113,7 +113,7 @@
 
                                         <label>UserName</label>
 
-                                        <input type="text" name="RegisterUsername" class="form-control" value="@ViewBag.Username" required="" />
+                                        <input type="text" name="RegisterUsername" class="form-control" value="@ViewBag.RegisterUsername" required="" />
 
                                     </div>
 
@@ -129,7 +129,7 @@
 
                                     <div class="form-group">
 
-                                        <label>password</label>
+                                        <label>Password</label>
 
                                         <input type="password" name="RegisterPassword" class="form-control" value="" pattern=".{6,}" title="Six or more characters required" required />
 
@@ -137,7 +137,7 @@
 
                                     <div class="form-group">
 
-                                        <label>Confirm password</label>
+                                        <label>Confirm Password</label>
 
                                         <input type="password" name="password2" class="form-control" value="" required="" />
 
