--- a/PTS/Views/Shared/_Layout.cshtml
+++ b/PTS/Views/Shared/_Layout.cshtml
@@ -51,11 +51,14 @@
         </div>
     </nav>
 
-    @if (ViewBag.Message != null)
+    @if (TempData.ContainsKey("Message"))
     {
-            <div class="alert alert-warning" role="alert" style="text-align:center">
-                @ViewBag.Message
-            </div>
+        <div class="alert alert-warning alert-dismissible fade show" role="alert" style="text-align:center">
+            @TempData["Message"]
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
     }
 
     <div>
