--- a/PTS/Views/Shared/_Layout.cshtml
+++ b/PTS/Views/Shared/_Layout.cshtml
@@ -39,12 +39,18 @@
                     </ul>*@
 
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/Account/LoginRegister">Login <span class="fas fa-sign-in-alt"></span> / Sign Up <span class="fas fa-user-alt"></span></a>
-                    </li>
-                    @*<li class="nav-item">
-                            <a class="nav-link" href="/../Account/LoginRegister">/  Login <span class="fas fa-sign-in-alt"></span></a>
-                        </li>*@
+                    @if (Session["Username"] == null)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="~/Account/LoginRegister">Login <span class="fas fa-sign-in-alt"></span> / Sign Up <span class="fas fa-user-alt"></span></a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="~/Account/Logout">Logout <span class="fas fa-sign-out-alt"></span></a>
+                        </li>
+                    }
                 </ul>
             </div>
 
