--- a/PTS/Views/Shared/_Layout.cshtml
+++ b/PTS/Views/Shared/_Layout.cshtml
@@ -48,8 +48,12 @@
                     else
                     {
                         <li class="nav-item">
+                            <a class="nav-link" href="~/Account/Index"><strong>@Session["Username"] </strong><span class="fas fa-user-circle"></span></a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="~/Account/Logout">Logout <span class="fas fa-sign-out-alt"></span></a>
                         </li>
+
                     }
                 </ul>
             </div>
