Add dateCreated field to userDetails.

--- a/PTS/Views/Account/LoginRegister.cshtml
+++ b/PTS/Views/Account/LoginRegister.cshtml
@@ -9,9 +9,9 @@
 
         function check() {
 
-            var firstpassword = document.formdata.password.value;
+            var firstpassword = document.formdata.RegisterPassword.value;
 
-            var secondpassword = document.formdata.password2.value;
+            var secondpassword = document.formdata.RegisterPassword2.value;
 
 
 
@@ -139,7 +139,7 @@
 
                                         <label>Confirm Password</label>
 
-                                        <input type="password" name="password2" class="form-control" value="" required="" />
+                                        <input type="password" name="RegisterPassword2" class="form-control" value="" required="" />
 
                                     </div>
 
