--- a/PTS/Views/Shared/_Layout.cshtml
+++ b/PTS/Views/Shared/_Layout.cshtml
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - PTS</title>
+    <title>@ViewBag.Title | PTS</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <!--font awesome script for icons-->
-    <script src="https://kit.fontawesome.com/0741bebd44.js" crossorigin="anonymous"></script>
+    <link href="~/Content/fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
     @RenderSection("HeadContent", required:false)
 </head>
 <body>
