Add delete feature for plants and add admin role change.

--- a/PTS/Views/Plant/AddFamily.cshtml
+++ b/PTS/Views/Plant/AddFamily.cshtml
@@ -48,6 +48,7 @@
 
                         <div class="btn-box">
                             <button type="submit" id="familyInsert" class="btn btn-success" hidden>Submit <i class="fas fa-paper-plane"></i></button>
+                            <a id="familyDelete" class="btn btn-danger" href="" hidden>Delete Family <i class="fas fa-trash-alt"></i></a>
                             <a id="familySelect" class="admin-btn" href="" hidden>Plant <i class="fas fa-forward"></i></a>
                         </div>
                         <br>
