Add Images upload feature.

--- a/PTS/Content/Account/LoginRegisterStyles.css
+++ b/PTS/Content/Account/LoginRegisterStyles.css
@@ -189,7 +189,7 @@ label {
 
 .background-loginregister {
     padding: 10%;
-    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url("../../Content/home/img/home-background.jpg");
+    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url("../../Content/home/img/home-background.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
