Add QR generation and search with qr features.

--- a/PTS/Views/Home/Index.cshtml
+++ b/PTS/Views/Home/Index.cshtml
@@ -30,39 +30,7 @@
 
     <div class="container" id="qr_adv">
 
-        <div class="row">
-
-            <div class="col-xl-6 col-md-6 col-sm-6" id="qr">
-
-                <button type="button" class="btn btn-success">Search by QR <span class="fas fa-qrcode"></span></button>
-
-            </div>
-
-            <div class="col-xl-6 col-md-6 col-sm-6" id="adv">
-
-                <div class="dropdown">
-
-                    <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
-
-                        Advance Search
-
-                    </button>
-
-                    <div class="dropdown-menu">
-
-                        <a class="dropdown-item" href="#">Family Name</a>
-
-                        <a class="dropdown-item" href="#">Scientific Name</a>
-
-                        <a class="dropdown-item" href="#">Variety</a>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
+        <a href="/Plant/QrSearch" class="btn btn-success">Search with QR <span class="fas fa-qrcode"></span></a>
 
     </div>
 
@@ -160,3 +128,4 @@
     </div>
 
 </section>
+
